Source/WebKit2/UIProcess/WebPageProxy.cpp
@@ -4857,6 +4857,10 @@ void WebPageProxy::didReceiveEvent(uint32_t opaqueType, bool handled)
 
         if (!m_keyEventQueue.isEmpty())
             m_process->send(Messages::WebPage::KeyEvent(m_keyEventQueue.first()), m_pageID);
+        else {
+            if (auto* automationSession = process().processPool().automationSession())
+                automationSession->keyboardEventsFlushedForPage(*this);
+        }
 
         // The call to doneWithKeyEvent may close this WebPage.
         // Protect against this being destroyed.
